--- a/btr/locale/ru/LC_MESSAGES/django.po
+++ b/btr/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-25 14:13+0300\n"
+"POT-Creation-Date: 2024-01-26 12:11+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -89,6 +89,48 @@ msgstr "Подтвердить"
 msgid "Verification codes not match"
 msgstr "Неверный код подтверждения"
 
+#: btr/bookings/admin.py:9
+msgid "Confirm selected bookings"
+msgstr "Подтвердить выбранные записи"
+
+#: btr/bookings/admin.py:11 btr/bookings/models.py:44 btr/bookings/views.py:100
+#: btr/tg_bot/handlers/admin/change_status.py:48
+msgid "confirmed"
+msgstr "подтверждено"
+
+#: btr/bookings/admin.py:14
+msgid "Cancel selected bookings"
+msgstr "Отменить выбранные записи"
+
+#: btr/bookings/admin.py:16 btr/bookings/models.py:46
+#: btr/tg_bot/handlers/admin/change_status.py:48
+msgid "canceled"
+msgstr "отменен"
+
+#: btr/bookings/admin.py:20
+msgid "Outer booking"
+msgstr "Записал админ"
+
+#: btr/bookings/admin.py:25
+msgid "Yes"
+msgstr "Да"
+
+#: btr/bookings/admin.py:56 btr/users/models.py:66
+msgid "User"
+msgstr "Пользователь"
+
+#: btr/bookings/admin.py:64
+msgid "Booking Management"
+msgstr "Управление записями"
+
+#: btr/bookings/admin.py:65 btr/users/admin.py:24
+msgid "Admin Panel"
+msgstr "Панель Администратора"
+
+#: btr/bookings/apps.py:8 btr/bookings/models.py:62
+msgid "Bookings"
+msgstr "Записи"
+
 #: btr/bookings/forms.py:30
 msgid "start_time"
 msgstr "Время начала"
@@ -138,11 +180,6 @@ msgstr "ожидает подтверждения"
 msgid "wait to confirm"
 msgstr "ожидает подтверждения"
 
-#: btr/bookings/models.py:44 btr/bookings/views.py:100
-#: btr/tg_bot/handlers/admin/change_status.py:48
-msgid "confirmed"
-msgstr "подтверждено"
-
 #: btr/bookings/models.py:44
 msgid "accepted"
 msgstr "принят"
@@ -155,19 +192,14 @@ msgstr "завершен"
 msgid "finished"
 msgstr "завершен"
 
-#: btr/bookings/models.py:46 btr/tg_bot/handlers/admin/change_status.py:48
-msgid "canceled"
-msgstr "отменен"
-
 #: btr/bookings/models.py:51 btr/templates/users/profile.html:97
 #: btr/templates/users/profile.html:142
 msgid "Status"
 msgstr "Статус"
 
-#: btr/bookings/models.py:62
-#, python-brace-format
-msgid "Status: {status}. Date: {date} {start} - {end}"
-msgstr "Статус: {status}. Дата: {date} {start} - {end}"
+#: btr/bookings/models.py:61
+msgid "Booking"
+msgstr "Запись"
 
 #: btr/bookings/signals.py:19 btr/users/models.py:48
 msgid "Newbie"
@@ -777,20 +809,16 @@ msgid "Are you sure to remove"
 msgstr "Вы уверены, что хотите удаить"
 
 #: btr/templates/users/delete.html:13
-#, fuzzy
-#| msgid "Yes, delete"
 msgid "Yes, delete my profile"
-msgstr "Да, отменить"
+msgstr "Да, удалить мой аккаунт"
 
-#: btr/templates/users/form.html:23 btr/users/views.py:64
+#: btr/templates/users/form.html:18 btr/users/views.py:64
 msgid "Profile Edit"
 msgstr "Изменение профиля"
 
-#: btr/templates/users/form.html:25
-#, fuzzy
-#| msgid "Edit Profile"
+#: btr/templates/users/form.html:20
 msgid "Delete profile"
-msgstr "Редактировать профиль"
+msgstr "Удаление аккаунта"
 
 #: btr/templates/users/profile.html:40
 msgid "Personal info"
@@ -1619,7 +1647,7 @@ msgstr ""
 msgid ""
 "🔴🔴🔴\n"
 "\n"
-"<strong>User with email <em>{email}</em> alreadyexists!</strong>\n"
+"<strong>User with email <em>{email}</em> already exists!</strong>\n"
 "\n"
 "<em>Forgot password? Type <strong>/reset</strong>command\n"
 "Or try again</em> ⤵️"
@@ -1667,18 +1695,10 @@ msgstr ""
 "<em>Проверь ввод и попробуй еще раз</em> ⤵️"
 
 #: btr/tg_bot/handlers/create.py:164
-#, fuzzy, python-brace-format
-#| msgid ""
-#| "🔴🔴🔴\n"
-#| "\n"
-#| "<strong>User with phone number <em>{email}</em> already exists!</strong>\n"
-#| "\n"
-#| "<em>Forgot password? Type <strong>/reset</strong>command\n"
-#| "Or try again</em> ⤵️"
 msgid ""
 "🔴🔴🔴\n"
 "\n"
-"<strong>User with phone number <em>{email}</em> alreadyexists!</strong>\n"
+"<strong>User with phone number <em>{email}</em> already exists!</strong>\n"
 "\n"
 "<em>Forgot password? Type <strong>/reset</strong>command\n"
 "Or try again</em> ⤵️"
@@ -1909,6 +1929,14 @@ msgstr "Запись на прокат (Требуется аккаунт на b
 #: btr/tg_bot/utils/commands.py:31
 msgid "Reset your forgotten password"
 msgstr "Сброс пароля"
+
+#: btr/users/admin.py:23
+msgid "Users Management"
+msgstr "Управление пользователями"
+
+#: btr/users/apps.py:8 btr/users/models.py:67
+msgid "Users"
+msgstr "Пользователи"
 
 #: btr/users/forms.py:14 btr/users/forms.py:60
 msgid "Unique. No more than 40 characters"
