[TRANSLATE] fix keywords

--- a/btr/locale/ru/LC_MESSAGES/django.po
+++ b/btr/locale/ru/LC_MESSAGES/django.po
@@ -565,7 +565,7 @@ msgstr ""
 
 #: btr/templates/base.html:8
 msgid "motorcycles rental, bike rental, enduro, enduro spb, pit bike spb"
-msgstr "прокат мотоциклов, прокат мотоциклов спб, эндуро, эндуро спб, прокат эндуро спб, прокат пит байков спб, прокат эндуро мотоциклов, прокат права не нужны, прокат 16+"
+msgstr "прокат мотоциклов, прокат мотоциклов спб, эндуро, эндуро спб, прокат эндуро спб, прокат пит байков спб, прокат эндуро мотоциклов, прокат права не нужны, прокат 16+, прокат эндуро с инструктором спб"
 
 #: btr/templates/blog/404.html:18
 msgid "Section is under development"
